.travis.yml added

--- a/RESTful_client_angular_oauth/index.html
+++ b/RESTful_client_angular_oauth/index.html
@@ -10,7 +10,7 @@
 <oauth
         site="http://localhost:8080/rest"
         client-id="clientId"
-        redirect-uri="http://localhost:8080/spring-security-oauth-ui-implicit/index"
+        redirect-uri="http://localhost:8080/rest"
         scope="read"
         template="oauthTemplate">
 </oauth>
