--- a/RESTful_client_angular_oauth/index.html
+++ b/RESTful_client_angular_oauth/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html ng-app="app">
 <head>
-    <title>Hello AngularJS</title>
+    <title>Angular REST client with oAuth</title>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.min.js"></script>
     <script src="js/main.js"></script>
 </head>
