--- a/RESTful_client_jQuery/index.html
+++ b/RESTful_client_jQuery/index.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>RESTFull client</title>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-        <script src="js/main.js"></script>
-    </head>
+<head>
+    <title>jQuery REST client</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="js/main.js"></script>
+</head>
 
-    <body>
-        <div>
-            <h3>Order:</h3>
-            <p class="order-id">The ID: </p>
-            <p class="customer-id">Customer ID: </p>
-            <p class="trans-id">The content is: </p>
-            <p class="good">Good: </p>
-            <p class="good-weight">Good weight: </p>
-            <p class="price">Price: </p>
-        </div>
-    </body>
+<body>
+<div>
+    <h3>Order:</h3>
+    <p class="customer-id">Customer ID: </p>
+    <p class="first-name">First name: </p>
+    <p class="last-name">Last name: </p>
+    <p class="age">Age: </p>
+</div>
+</body>
 </html>
