god renmed to product

--- a/RESTful_client_angular_oauth/index.html
+++ b/RESTful_client_angular_oauth/index.html
@@ -19,8 +19,8 @@
     <p>ID: {{order.orderId}}</p>
     <p>Transaction ID: {{order.transId}}</p>
     <p>Customer ID: {{order.customerId}}</p>
-    <p>Good: {{order.good}}</p>
-    <p>Good weight: {{order.goodWeight}}</p>
+    <p>Good: {{order.product}}</p>
+    <p>Good weight: {{order.productWeight}}</p>
     <p>Price: {{order.price}}</p>
 </div>
 </body>
