Tables and responses reorganization

--- a/RESTful_client_angular_oauth/index.html
+++ b/RESTful_client_angular_oauth/index.html
@@ -21,7 +21,7 @@
     <p>Customer ID: {{order.customerId}}</p>
     <p>Good: {{order.product}}</p>
     <p>Good weight: {{order.productWeight}}</p>
-    <p>Price: {{order.price}}</p>
+    <p>Price: {{order.totalPrice}}</p>
 </div>
 </body>
 </html>
