Field darnames, code refactored, product DAO, Service and REST controller added all of them under construction

--- a/RESTful_client_angular_oauth/index.html
+++ b/RESTful_client_angular_oauth/index.html
@@ -16,9 +16,9 @@
 </oauth>
 <div ng-controller="OrderInfo">
     <h3>Order:</h3>
-    <p>ID: {{order.orderId}}</p>
+    <p>ID: {{order.orderNumber}}</p>
     <p>Transaction ID: {{order.transId}}</p>
-    <p>Customer ID: {{order.customerId}}</p>
+    <p>Customer ID: {{order.customerNumber}}</p>
     <p>Good: {{order.product}}</p>
     <p>Good weight: {{order.productWeight}}</p>
     <p>Price: {{order.price}}</p>
