--- a/RESTful_client_angular_oauth/index.html
+++ b/RESTful_client_angular_oauth/index.html
@@ -20,7 +20,7 @@
     <p>Transaction ID: {{order.transId}}</p>
     <p>Customer ID: {{order.customerNumber}}</p>
     <p>Good: {{order.product}}</p>
-    <p>Good weight: {{order.productWeight}}</p>
+    <p>Good weight: {{order.productLine}}</p>
     <p>Price: {{order.price}}</p>
 </div>
 </body>
