Implementation of JPA started

--- a/RESTful_client_angular_oauth/index.html
+++ b/RESTful_client_angular_oauth/index.html
@@ -18,7 +18,7 @@
     <h3>Order:</h3>
     <p>ID: {{order.orderNumber}}</p>
     <p>Transaction ID: {{order.transId}}</p>
-    <p>Customer ID: {{order.customerNumber}}</p>
+    <p>Customer ID: {{order.customer}}</p>
     <p>Good: {{order.product}}</p>
     <p>Good weight: {{order.productLine}}</p>
     <p>Price: {{order.price}}</p>
