DTO for order responses added

--- a/RESTful_client_angular/index.html
+++ b/RESTful_client_angular/index.html
@@ -9,7 +9,7 @@
 <body>
 <div ng-controller="CustomerInfo">
     <h3>Order:</h3>
-    <p>Customer ID: {{customer.customer}}</p>
+    <p>Customer ID: {{customer.customerNumber}}</p>
     <p>First name: {{customer.firstName}}</p>
     <p>Last name: {{customer.lastName}}</p>
     <p>Age: {{customer.age}}</p>
