Squesnces for models added, code refactoring performed

--- a/REST-client/RESTful_client_angular_oauth/index.html
+++ b/REST-client/RESTful_client_angular_oauth/index.html
@@ -16,7 +16,7 @@
 </oauth>
 <div ng-controller="OrderInfo">
     <h3>Order:</h3>
-    <p>ID: {{order.orderNumber}}</p>
+    <p>ID: {{order.orderId}}</p>
     <p>Transaction ID: {{order.transId}}</p>
     <p>Customer ID: {{order.customer}}</p>
     <p>Good: {{order.product}}</p>
