Angular and jQuesry clients embedded into the project

--- a/REST-client/src/main/webapp/WEB-INF/html/angular-client.html
+++ b/REST-client/src/main/webapp/WEB-INF/html/angular-client.html
@@ -3,7 +3,7 @@
 <head>
     <title>Anglular REST client</title>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="../js/main-angular.js"></script>
 </head>
 
 <body>
