--- a/REST-client/src/main/webapp/WEB-INF/html/jquery-client.html
+++ b/REST-client/src/main/webapp/WEB-INF/html/jquery-client.html
@@ -3,7 +3,7 @@
 <head>
     <title>jQuery REST client</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="/js/main-jquery.js"></script>
 </head>
 
 <body>
